# routes/index.js
@@ -6,6 +6,6 @@ router.get('/', (req, res) => {
 
 router.use('/contacts', require('./contacts'));
 
-
+router.use('/products', require('./products'));
 
 module.exports = router;
